Fix: two-column property card layout on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1348,7 +1348,7 @@ button,
   }
 
   .propiedades-img {
-    height: 180px !important;
+    height: 140px !important;
     aspect-ratio: 16/10;
   }
 
